Event list performer overflow. Fixed the performer overflow issue on the events list. Move the lock icon over to the right a bit.

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -17,6 +17,16 @@ page-home {
         padding: 0
     }
 
+    .lockIcon {
+        text-align: right;
+    }
+
+    .performer {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
     div.item-inner {
         margin-left: 0;
     }
